# fintech-rag-system

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  knowledge.md  pyproject.toml
src/fintech-rag/: __init__.py  main.py
src/fintech-rag/api/: app.py
src/fintech-rag/core/: huggingFace_rag.py  zhipu_llm.py
src/fintech-rag/core/chroma_db/451122fd-7ae7-4d3a-a7c2-e25bbb37613e/: index_metadata.pickle
static/: index.html
